# rust-module-template

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
app_cli/: Cargo.toml
app_cli/src/: main.rs
app_core/: Cargo.toml
app_core/src/: lib.rs
app_grpc_api/: Cargo.toml  build.rs
app_grpc_api/proto/: hello.proto
app_grpc_api/src/: main.rs
app_http_api/: Cargo.toml
app_http_api/src/: main.rs
app_macros/: Cargo.toml
