[package]
name = "app_http_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
app_core = { path = "../app_core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
